# aws-enterprise-multimodal-rag-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
config/: aws_architecture_mapping.yaml  evaluation_config.yaml  guardrails_config.yaml  model_config.yaml  rag_config.yaml
data/evaluation/: sample_questions.csv
data/processed/: chunk_embeddings.json  document_chunks.json  documents.json
docs/: agentic_workflows.md  architecture.md  architecture_diagram_ascii.md  aws_architecture_blueprint.md  aws_cost_and_monitoring.md  aws_security_model.md  aws_service_mapping.md  deployment_blueprint.md  document_ingestion_design.md  embedding_and_vector_store_design.md  evaluation_harness_design.md  evaluation_strategy.md  evidence_artifacts.md  example_commands.md  experimentation_strategy.md  guardrails_strategy.md  interview_talking_points.md  limitations.md  monitoring_and_reporting_design.md  project_roadmap.md  rag_design.md  rag_generation_design.md  repository_review_checklist.md  retrieval_orchestration_design.md
documents/sample/: sample_policy.md
outputs/sample/: dashboard_metrics.csv  dashboard_metrics.json  evaluation_results.csv  evaluation_results.json  generated_answer.json  guardrail_results.json  (+4 more)
reports/: document_ingestion_report.md
tests/: test_aws_architecture_docs.py  test_document_ingestion.py  test_embeddings_and_vector_store.py  test_guardrails.py  test_monitoring_and_reporting.py  test_project_structure.py  test_rag_evaluation.py  test_rag_generation.py  test_repository_readiness.py  test_retrieval_orchestration.py
(+46 files in other folders)
