[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-enterprise-multimodal-rag-platform"
version = "0.1.0"
description = "Local-first foundation for an AWS Enterprise Multimodal RAG Platform."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Project Maintainer" }
]
dependencies = [
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
